--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quick-generator",
   "author": "J. Rasmussen",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "license": "MIT",
   "description": "A quick generator for node apps",
   "main": "app.js",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "commander": "^2.11.0",
+    "express": "^4.16.2",
     "fs-extra": "^4.0.1"
   },
   "devDependencies": {
