--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-[*.js]
 charset = utf-8
 indent_style = spaces
 indent_size = 4
+trim_trailing_whitespace = true
