--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "quick-generator",
   "author": "J. Rasmussen",
-  "version": "0.3.0",
+  "version": "3.0.0",
   "license": "MIT",
   "description": "A quick generator for node apps",
   "main": "app/app.js",
   "bin": "app/app.js",
   "pkg": {
-    "assets": "app/**/*"
+    "assets": "{app, utils}/**/*"
   },
   "scripts": {
     "start": "node ./app/app.js",
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
-    "commander": "^2.12.2",
     "execa": "^0.8.0",
-    "fs-extra": "^4.0.2",
+    "fs-extra": "^5.0.0",
+    "meow": "^4.0.0",
     "moment": "^2.20.1"
   },
   "devDependencies": {
