--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "ava": "^0.22.0",
-    "prettier": "^1.9.2"
+    "prettier": "^1.9.2",
+    "test-console": "^1.1.0"
   }
 }
