--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chalk": "^2.3.0",
     "execa": "^0.8.0",
     "fs-extra": "^5.0.0",
+    "lumberr": "^1.0.3",
     "meow": "^4.0.0",
     "moment": "^2.20.1"
   },
