updatd the help section with better syntax

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node ./app/app.js",
     "test": "ava",
-    "format": "prettier --single-quote --tab-width 4 --print-width 80 --write \"{,!(node_modules)/**/}*.js\"",
+    "format": "prettier --single-quote --arrow-parens avoid --tab-width 4 --print-width 80 --write \"{,!(node_modules)/**/}*.js\"",
     "build": "pkg .",
     "build:win": "pkg . -t node8-win-x64",
     "build:lin": "pkg . -t node8-linux-x64",
